<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--
    * we used ConstraintLayout to Build a Responsive UI
    * and to create a flat hierarchy
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.welcome.WelcomeFragment">

        <!-- Guideline used for arranging item inside ConstraintLayout -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <!-- Guideline used for arranging item inside ConstraintLayout -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <!-- Emoji of successful login -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="205dp"
            android:layout_height="205dp"
            android:contentDescription="@string/welcome_icon"
            app:layout_constraintBottom_toTopOf="@+id/tvWelcome"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_round_done_24"
            app:tint="@color/colorAccent" />

        <!-- welcome text -->
        <TextView
            android:id="@+id/tvWelcome"
            style="@style/BigTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/hello_there"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/tvWelcomeMessage"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <!-- welcome message -->
        <TextView
            android:id="@+id/tvWelcomeMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <!-- button to navigate to the next destination -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            style="@style/ColoredButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>