<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bShoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        tools:context=".ui.screens.shoe_detail.ShoeDetailFragment">

        <TextView
            android:id="@+id/tvName"
            style="@style/TextStylePadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/etName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/etName"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="text"
            android:text="@{bShoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/tvCompany"
            app:layout_constraintEnd_toEndOf="@id/tvName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvCompany"
            style="@style/TextStylePadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/etCompany"
            app:layout_constraintEnd_toEndOf="@id/etName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <EditText
            android:id="@+id/etCompany"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/company"
            android:inputType="text"
            android:text="@{bShoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/tvSize"
            app:layout_constraintEnd_toEndOf="@id/tvCompany"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/tvCompany"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

        <TextView
            android:id="@+id/tvSize"
            style="@style/TextStylePadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/etSize"
            app:layout_constraintEnd_toEndOf="@id/etCompany"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/etCompany"
            app:layout_constraintTop_toBottomOf="@+id/etCompany" />

        <EditText
            android:id="@+id/etSize"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/size"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@{String.valueOf(bShoe.size)}"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="@id/tvSize"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/tvSize"
            app:layout_constraintTop_toBottomOf="@+id/tvSize" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextStylePadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/etDescription"
            app:layout_constraintEnd_toEndOf="@id/etSize"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/etSize"
            app:layout_constraintTop_toBottomOf="@+id/etSize" />

        <EditText
            android:id="@+id/etDescription"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textLongMessage|text|textMultiLine"
            android:text="@{bShoe.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvDescription"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/tvDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/ColoredButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/BorderlessColoredButton"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>